refactor: Replace stream.collect(Collectors.toList()) by stream.toList()
 related to #85